syntax = "proto3";

option go_package = "/api/grpc/golangApi";

service Ibsen {

    rpc create (Topic) returns (TopicStatus) {
    }
    rpc drop (Topic) returns (TopicStatus) {
    }

    rpc write (TopicMessage) returns (Status) {
    }
    rpc writeBatch (TopicBatchMessage) returns (Status) {
    }
    rpc writeStream (stream TopicMessage) returns (Status) {
    }

    rpc readFromBeginning (Topic) returns (stream Entry) {
    }
    rpc readBatchFromBeginning (TopicBatch) returns (stream EntryBatch) {

    }
    rpc readFromOffset (TopicOffset) returns (stream Entry) {
    }
    rpc readBatchFromOffset (TopicBatchOffset) returns (stream EntryBatch) {
    }

    rpc listTopics (Empty) returns (Topics) {
    }
    rpc listTopicsWithOffset (Empty) returns (TopicOffsets) {
    }
}

message EntryBatch {
    repeated Entry entries = 1;
}

message TopicStatus {
    bool created = 1;
}

message Empty {

}

message Offset {
    uint64 id = 1;
}

message Topics {
    repeated string name = 1;
}

message Topic {
    string name = 1;
}

message TopicBatch {
    string name = 1;
    uint32 batchSize = 2;
}

message TopicOffset {
    string topicName = 1;
    uint64 offset = 2;
}

message TopicOffsets {
    repeated TopicOffset topicOffset = 1;
}

message TopicBatchOffset {
    string topicName = 1;
    uint64 offset = 2;
    uint32 batchSize = 3;
}

message TopicMessage {
    string topicName = 1;
    bytes messagePayload = 2;
}

message TopicBatchMessage {
    string topicName = 1;
    repeated bytes messagePayload = 2;
}

message Message {
    bytes payload = 1;
}

message Entry {
    uint64 offset = 1;
    bytes payload = 2;
}

message Status {
    int32 entries = 1;
    Offset current = 2;
}